Batch update of generated files

--- a/home.html
+++ b/home.html
@@ -148,6 +148,37 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "Rapper Pháo tuổi 22: Nhan sắc thăng hạng, từng để đầu đinh gây sốc",
+    "content": "Rapper Pháo, tên thật là Nguyễn Diệu Huyền, hiện đang thu hút sự chú ý của khán giả với ca khúc \"Sự nghiệp chướng\" đạt vị trí số một trên YouTube Việt Nam chỉ sau hai ngày ra mắt. Nữ rapper 22 tuổi không chỉ nổi bật với tài năng âm nhạc mà còn qua phong cách thời trang cá tính và những thay đổi ngoại hình nổi bật, bao gồm cả việc phẫu thuật thẩm mỹ. Cô cũng gây ấn tượng khi để đầu đinh để quyên góp tóc cho bệnh nhân ung thư và đã có nhiều trải nghiệm trong sự nghiệp âm nhạc của mình.",
+    "link": "https://dantri.com.vn/giai-tri/rapper-phao-tuoi-22-nhan-sac-thang-hang-tung-de-dau-dinh-gay-soc-20250323105600594.htm",
+    "cat": "giai-tri",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Rapper Pháo đã từng để kiểu tóc nào gây sốc?",
+    "answers": [
+      {
+        "text": "Đầu đinh",
+        "correct": true
+      },
+      {
+        "text": "Tóc dài",
+        "correct": false
+      },
+      {
+        "text": "Tóc xoăn",
+        "correct": false
+      },
+      {
+        "text": "Tóc ngắn",
+        "correct": false
+      },
+      {
+        "text": "Tóc nhuộm màu sắc nổi bật",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Siêu dự án Cocobay siêu sao bóng đá Ronaldo từng quảng bá sẽ ‘thông’ từ quý 1-2026",
     "content": "Siêu dự án Cocobay, nằm tại Đà Nẵng và được quảng bá bởi siêu sao Ronaldo, sẽ có thể được khởi động trở lại từ quý 1 năm 2026. Dự án này đã gặp nhiều khó khăn trong việc xác định giá đất và thu nghĩa vụ tài chính từ các cơ quan chức năng. Dự kiến, khoảng 9 trong số 15 dự án liên quan sẽ được tháo gỡ vướng mắc trong năm 2025, với 3 dự án, trong đó có Cocobay, sẽ hoàn thành vào quý 1-2026.",
     "link": "https://tuoitre.vn/sieu-du-an-cocobay-sieu-sao-bong-da-ronaldo-tung-quang-ba-se-thong-tu-quy-1-2026-2025032309582308.htm",
@@ -170,33 +201,6 @@
       },
       {
         "text": "Năm 2024",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Bị ung thư phổi có ăn thịt gà được không?",
-    "content": "Người bệnh ung thư phổi vẫn có thể ăn thịt gà vì đây là nguồn protein dồi dào rất tốt cho sức khỏe. Thịt gà giúp tăng cường sức đề kháng và hỗ trợ phục hồi trong quá trình điều trị. Tuy nhiên, người bệnh cần chú ý đến cách chế biến và liều lượng tiêu thụ, ưu tiên thịt nạc và tránh các phương pháp chiên, rán để giữ lại dinh dưỡng. Lời khuyên từ bác sĩ là nên tham khảo ý kiến chuyên gia dinh dưỡng để xây dựng chế độ ăn phù hợp.",
-    "link": "https://vnexpress.net/bi-ung-thu-phoi-co-an-thit-ga-duoc-khong-4864537.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Người bị ung thư phổi có nên ăn thịt gà không?",
-    "answers": [
-      {
-        "text": "Có, thịt gà cung cấp protein tốt cho sức khỏe.",
-        "correct": true
-      },
-      {
-        "text": "Không, thịt gà không tốt cho bệnh nhân ung thư.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ nên ăn thịt gà sống.",
-        "correct": false
-      },
-      {
-        "text": "Có, nhưng chỉ ăn thịt gà chiên.",
         "correct": false
       }
     ]
@@ -229,28 +233,28 @@
     ]
   },
   {
-    "title": "5 điều nên làm mỗi ngày để giảm hôi miệng",
-    "content": "Bài viết đề cập đến 5 thói quen hàng ngày giúp giảm hôi miệng, bao gồm việc duy trì hệ tiêu hóa khỏe mạnh, giữ gìn vệ sinh răng miệng, súc miệng sau khi thức dậy, nhai một lá trầu sau bữa ăn và giữ đủ nước. Những thói quen này không chỉ giúp cải thiện hơi thở mà còn hỗ trợ sức khỏe răng miệng tổng thể. Việc chăm sóc miệng đúng cách có thể ngăn ngừa các nguyên nhân gây hôi miệng do vi khuẩn và thực phẩm.",
-    "link": "https://vnexpress.net/5-dieu-nen-lam-moi-ngay-de-giam-hoi-mieng-4864649.html",
+    "title": "Ba bệnh truyền nhiễm có thể bùng phát khi biến đổi khí hậu",
+    "content": "Biến đổi khí hậu đang tạo điều kiện cho ba bệnh truyền nhiễm bùng phát, bao gồm cúm, sởi và sốt xuất huyết. Các yếu tố như nhiệt độ ấm lên, đô thị hóa và thay đổi môi trường sống khiến virus dễ dàng lây lan. Đặc biệt, cúm có nguy cơ bùng phát mạnh hơn trong điều kiện khí hậu thay đổi, trong khi sốt xuất huyết gia tăng do mùa mưa và điều kiện thuận lợi cho muỗi sinh sản. Các vaccine phòng chống các bệnh này đã có sẵn và cần thiết cho cả trẻ em và người lớn.",
+    "link": "https://vnexpress.net/ba-benh-truyen-nhiem-co-the-bung-phat-khi-bien-doi-khi-hau-4864728.html",
     "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Làm thế nào để giảm hôi miệng hàng ngày?",
+    "positivity": 6,
+    "importance": 9,
+    "question": "Biến đổi khí hậu có ảnh hưởng gì đến sức khỏe con người?",
     "answers": [
       {
-        "text": "Duy trì hệ tiêu hóa khỏe mạnh.",
+        "text": "Có thể gây bùng phát các bệnh truyền nhiễm như cúm, sởi và sốt xuất huyết.",
         "correct": true
       },
       {
-        "text": "Chỉ cần đánh răng một lần mỗi ngày.",
+        "text": "Không ảnh hưởng gì đến sức khỏe con người.",
         "correct": false
       },
       {
-        "text": "Uống nhiều đồ uống có gas.",
+        "text": "Chỉ ảnh hưởng đến sức khỏe của động vật.",
         "correct": false
       },
       {
-        "text": "Không cần súc miệng sau khi ăn.",
+        "text": "Gây ra bệnh tim mạch nhưng không liên quan đến bệnh truyền nhiễm.",
         "correct": false
       }
     ]
@@ -287,28 +291,55 @@
     ]
   },
   {
-    "title": "Ba bệnh truyền nhiễm có thể bùng phát khi biến đổi khí hậu",
-    "content": "Biến đổi khí hậu đang tạo điều kiện cho ba bệnh truyền nhiễm bùng phát, bao gồm cúm, sởi và sốt xuất huyết. Các yếu tố như nhiệt độ ấm lên, đô thị hóa và thay đổi môi trường sống khiến virus dễ dàng lây lan. Đặc biệt, cúm có nguy cơ bùng phát mạnh hơn trong điều kiện khí hậu thay đổi, trong khi sốt xuất huyết gia tăng do mùa mưa và điều kiện thuận lợi cho muỗi sinh sản. Các vaccine phòng chống các bệnh này đã có sẵn và cần thiết cho cả trẻ em và người lớn.",
-    "link": "https://vnexpress.net/ba-benh-truyen-nhiem-co-the-bung-phat-khi-bien-doi-khi-hau-4864728.html",
+    "title": "5 điều nên làm mỗi ngày để giảm hôi miệng",
+    "content": "Bài viết đề cập đến 5 thói quen hàng ngày giúp giảm hôi miệng, bao gồm việc duy trì hệ tiêu hóa khỏe mạnh, giữ gìn vệ sinh răng miệng, súc miệng sau khi thức dậy, nhai một lá trầu sau bữa ăn và giữ đủ nước. Những thói quen này không chỉ giúp cải thiện hơi thở mà còn hỗ trợ sức khỏe răng miệng tổng thể. Việc chăm sóc miệng đúng cách có thể ngăn ngừa các nguyên nhân gây hôi miệng do vi khuẩn và thực phẩm.",
+    "link": "https://vnexpress.net/5-dieu-nen-lam-moi-ngay-de-giam-hoi-mieng-4864649.html",
     "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 9,
-    "question": "Biến đổi khí hậu có ảnh hưởng gì đến sức khỏe con người?",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Làm thế nào để giảm hôi miệng hàng ngày?",
     "answers": [
       {
-        "text": "Có thể gây bùng phát các bệnh truyền nhiễm như cúm, sởi và sốt xuất huyết.",
+        "text": "Duy trì hệ tiêu hóa khỏe mạnh.",
         "correct": true
       },
       {
-        "text": "Không ảnh hưởng gì đến sức khỏe con người.",
+        "text": "Chỉ cần đánh răng một lần mỗi ngày.",
         "correct": false
       },
       {
-        "text": "Chỉ ảnh hưởng đến sức khỏe của động vật.",
+        "text": "Uống nhiều đồ uống có gas.",
         "correct": false
       },
       {
-        "text": "Gây ra bệnh tim mạch nhưng không liên quan đến bệnh truyền nhiễm.",
+        "text": "Không cần súc miệng sau khi ăn.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Bị ung thư phổi có ăn thịt gà được không?",
+    "content": "Người bệnh ung thư phổi vẫn có thể ăn thịt gà vì đây là nguồn protein dồi dào rất tốt cho sức khỏe. Thịt gà giúp tăng cường sức đề kháng và hỗ trợ phục hồi trong quá trình điều trị. Tuy nhiên, người bệnh cần chú ý đến cách chế biến và liều lượng tiêu thụ, ưu tiên thịt nạc và tránh các phương pháp chiên, rán để giữ lại dinh dưỡng. Lời khuyên từ bác sĩ là nên tham khảo ý kiến chuyên gia dinh dưỡng để xây dựng chế độ ăn phù hợp.",
+    "link": "https://vnexpress.net/bi-ung-thu-phoi-co-an-thit-ga-duoc-khong-4864537.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Người bị ung thư phổi có nên ăn thịt gà không?",
+    "answers": [
+      {
+        "text": "Có, thịt gà cung cấp protein tốt cho sức khỏe.",
+        "correct": true
+      },
+      {
+        "text": "Không, thịt gà không tốt cho bệnh nhân ung thư.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ nên ăn thịt gà sống.",
+        "correct": false
+      },
+      {
+        "text": "Có, nhưng chỉ ăn thịt gà chiên.",
         "correct": false
       }
     ]
@@ -538,33 +569,6 @@
     ]
   },
   {
-    "title": "6 món ăn người tiểu đường nên tránh",
-    "content": "Bài viết nêu rõ 6 món ăn mà người tiểu đường nên tránh để kiểm soát đường huyết. Những món ăn này bao gồm thực phẩm giàu tinh bột tinh chế, kẹo ngọt, trái cây sấy khô, thịt mỡ, thực phẩm chiên, và sữa nguyên kem. Việc tránh xa những thực phẩm này có thể giúp người tiểu đường duy trì sức khỏe tốt hơn và giảm nguy cơ biến chứng. Thay vào đó, người bệnh nên lựa chọn các thực phẩm như trái cây ít ngọt và ngũ cốc nguyên hạt để có lợi cho sức khỏe.",
-    "link": "https://vnexpress.net/6-mon-an-nguoi-tieu-duong-nen-tranh-4864505.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Người tiểu đường nên tránh những món ăn nào để kiểm soát đường huyết?",
-    "answers": [
-      {
-        "text": "Thực phẩm giàu tinh bột, kẹo ngọt, thịt mỡ, thực phẩm chiên, trái cây sấy khô, sữa nguyên kem",
-        "correct": true
-      },
-      {
-        "text": "Chỉ nên ăn trái cây tươi",
-        "correct": false
-      },
-      {
-        "text": "Nên ăn nhiều thịt mỡ",
-        "correct": false
-      },
-      {
-        "text": "Chỉ uống nước ngọt không đường",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Nguyên nhân gây cứng khớp",
     "content": "Cứng khớp là triệu chứng phổ biến do nhiều nguyên nhân khác nhau, bao gồm tư thế không đúng, thoái hóa khớp, viêm khớp, và bệnh gout. Thoái hóa khớp là nguyên nhân chính, dẫn đến đau và hạn chế vận động do sự bào mòn sụn khớp. Các bệnh viêm khớp, như viêm khớp dạng thấp và viêm cột sống dính khớp, cũng gây ra tình trạng cứng khớp, đặc biệt là vào buổi sáng. Chấn thương khớp và chế độ ăn uống kém cũng góp phần làm tăng nguy cơ cứng khớp.",
     "link": "https://vnexpress.net/nguyen-nhan-gay-cung-khop-4864539.html",
@@ -587,6 +591,33 @@
       },
       {
         "text": "Chỉ do tuổi tác cao",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "6 món ăn người tiểu đường nên tránh",
+    "content": "Bài viết nêu rõ 6 món ăn mà người tiểu đường nên tránh để kiểm soát đường huyết. Những món ăn này bao gồm thực phẩm giàu tinh bột tinh chế, kẹo ngọt, trái cây sấy khô, thịt mỡ, thực phẩm chiên, và sữa nguyên kem. Việc tránh xa những thực phẩm này có thể giúp người tiểu đường duy trì sức khỏe tốt hơn và giảm nguy cơ biến chứng. Thay vào đó, người bệnh nên lựa chọn các thực phẩm như trái cây ít ngọt và ngũ cốc nguyên hạt để có lợi cho sức khỏe.",
+    "link": "https://vnexpress.net/6-mon-an-nguoi-tieu-duong-nen-tranh-4864505.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Người tiểu đường nên tránh những món ăn nào để kiểm soát đường huyết?",
+    "answers": [
+      {
+        "text": "Thực phẩm giàu tinh bột, kẹo ngọt, thịt mỡ, thực phẩm chiên, trái cây sấy khô, sữa nguyên kem",
+        "correct": true
+      },
+      {
+        "text": "Chỉ nên ăn trái cây tươi",
+        "correct": false
+      },
+      {
+        "text": "Nên ăn nhiều thịt mỡ",
+        "correct": false
+      },
+      {
+        "text": "Chỉ uống nước ngọt không đường",
         "correct": false
       }
     ]
@@ -886,28 +917,32 @@
     ]
   },
   {
-    "title": "Lợi ích khi ăn các loại hạt buổi sáng",
-    "content": "Ăn các loại hạt vào bữa sáng mang lại nhiều lợi ích cho sức khỏe như cung cấp chất dinh dưỡng, giảm nguy cơ mắc bệnh tim, hỗ trợ tiêu hóa và giúp kiểm soát cân nặng. Các loại hạt như hạt chia, óc chó và hạnh nhân rất giàu chất béo lành mạnh, protein và chất xơ, giúp duy trì năng lượng và cảm giác no lâu. Bữa sáng với các loại hạt còn cung cấp nhiều vitamin và khoáng chất cần thiết cho cơ thể, từ đó góp phần nâng cao sức khỏe tổng thể.",
-    "link": "https://vnexpress.net/loi-ich-khi-an-cac-loai-hat-buoi-sang-4864646.html",
+    "title": "Nguyên nhân khiến trẻ nôn trớ",
+    "content": "Trẻ sơ sinh dễ bị nôn trớ do hệ tiêu hóa chưa hoàn thiện, bú quá no hoặc một số bệnh lý đường tiêu hóa. Nôn trớ thường là tình trạng lành tính và có thể tự khỏi khi trẻ lớn hơn. Tuy nhiên, nếu tình trạng này kéo dài kèm theo các dấu hiệu bất thường như chậm tăng cân hay sốt cao, cha mẹ nên đưa trẻ đi khám. Nguyên nhân nôn trớ có thể bao gồm trào ngược dạ dày thực quản, dị ứng sữa hoặc nhiễm trùng tiêu hóa.",
+    "link": "https://vnexpress.net/nguyen-nhan-khien-tre-non-tro-4864611.html",
     "cat": "suc-khoe",
-    "positivity": 9,
+    "positivity": 7,
     "importance": 8,
-    "question": "Lợi ích của việc ăn các loại hạt vào buổi sáng là gì?",
+    "question": "Tại sao trẻ sơ sinh lại bị nôn trớ?",
     "answers": [
       {
-        "text": "Giảm nguy cơ mắc bệnh tim và hỗ trợ tiêu hóa.",
+        "text": "Do hệ tiêu hóa chưa hoàn thiện",
         "correct": true
       },
       {
-        "text": "Chỉ cung cấp calo mà không có dinh dưỡng.",
+        "text": "Do trẻ ăn quá nhiều",
         "correct": false
       },
       {
-        "text": "Không có lợi ích gì cho sức khỏe.",
+        "text": "Do trẻ không được bú sữa",
         "correct": false
       },
       {
-        "text": "Làm tăng cảm giác đói nhanh hơn.",
+        "text": "Do trẻ bị sốt cao",
+        "correct": false
+      },
+      {
+        "text": "Do trẻ không ăn uống đầy đủ",
         "correct": false
       }
     ]
@@ -944,32 +979,28 @@
     ]
   },
   {
-    "title": "Nguyên nhân khiến trẻ nôn trớ",
-    "content": "Trẻ sơ sinh dễ bị nôn trớ do hệ tiêu hóa chưa hoàn thiện, bú quá no hoặc một số bệnh lý đường tiêu hóa. Nôn trớ thường là tình trạng lành tính và có thể tự khỏi khi trẻ lớn hơn. Tuy nhiên, nếu tình trạng này kéo dài kèm theo các dấu hiệu bất thường như chậm tăng cân hay sốt cao, cha mẹ nên đưa trẻ đi khám. Nguyên nhân nôn trớ có thể bao gồm trào ngược dạ dày thực quản, dị ứng sữa hoặc nhiễm trùng tiêu hóa.",
-    "link": "https://vnexpress.net/nguyen-nhan-khien-tre-non-tro-4864611.html",
+    "title": "Lợi ích khi ăn các loại hạt buổi sáng",
+    "content": "Ăn các loại hạt vào bữa sáng mang lại nhiều lợi ích cho sức khỏe như cung cấp chất dinh dưỡng, giảm nguy cơ mắc bệnh tim, hỗ trợ tiêu hóa và giúp kiểm soát cân nặng. Các loại hạt như hạt chia, óc chó và hạnh nhân rất giàu chất béo lành mạnh, protein và chất xơ, giúp duy trì năng lượng và cảm giác no lâu. Bữa sáng với các loại hạt còn cung cấp nhiều vitamin và khoáng chất cần thiết cho cơ thể, từ đó góp phần nâng cao sức khỏe tổng thể.",
+    "link": "https://vnexpress.net/loi-ich-khi-an-cac-loai-hat-buoi-sang-4864646.html",
     "cat": "suc-khoe",
-    "positivity": 7,
+    "positivity": 9,
     "importance": 8,
-    "question": "Tại sao trẻ sơ sinh lại bị nôn trớ?",
+    "question": "Lợi ích của việc ăn các loại hạt vào buổi sáng là gì?",
     "answers": [
       {
-        "text": "Do hệ tiêu hóa chưa hoàn thiện",
+        "text": "Giảm nguy cơ mắc bệnh tim và hỗ trợ tiêu hóa.",
         "correct": true
       },
       {
-        "text": "Do trẻ ăn quá nhiều",
+        "text": "Chỉ cung cấp calo mà không có dinh dưỡng.",
         "correct": false
       },
       {
-        "text": "Do trẻ không được bú sữa",
+        "text": "Không có lợi ích gì cho sức khỏe.",
         "correct": false
       },
       {
-        "text": "Do trẻ bị sốt cao",
-        "correct": false
-      },
-      {
-        "text": "Do trẻ không ăn uống đầy đủ",
+        "text": "Làm tăng cảm giác đói nhanh hơn.",
         "correct": false
       }
     ]
@@ -1350,6 +1381,33 @@
     ]
   },
   {
+    "title": "Bỏ việc lương cao, sang Việt Nam 'tìm ý nghĩa cuộc đời'",
+    "content": "Choi Won Jun, một người Hàn Quốc, đã từ bỏ công việc lương cao ở Seoul để tìm kiếm ý nghĩa cuộc sống tại TP HCM, Việt Nam. Sau khi trải qua cuộc sống áp lực và nhàm chán, anh quyết định học nấu ăn và mở quán thịt nướng. Jun cảm nhận được sự ấm áp, tình người và tinh thần thoải mái của người Việt Nam, điều mà anh không tìm thấy ở Hàn Quốc. Giờ đây, anh làm việc chăm chỉ nhưng cảm thấy hạnh phúc và thỏa mãn hơn nhiều với cuộc sống mới của mình.",
+    "link": "https://vnexpress.net/bo-viec-luong-cao-sang-viet-nam-tim-y-nghia-cuoc-doi-4864410.html",
+    "cat": "gia-dinh",
+    "positivity": 9,
+    "importance": 7,
+    "question": "Tại sao Choi Won Jun quyết định bỏ việc ở Hàn Quốc để sống tại Việt Nam?",
+    "answers": [
+      {
+        "text": "Vì anh muốn tìm kiếm ý nghĩa cuộc sống và hạnh phúc hơn.",
+        "correct": true
+      },
+      {
+        "text": "Vì anh muốn kiếm nhiều tiền hơn.",
+        "correct": false
+      },
+      {
+        "text": "Vì anh muốn trở thành đầu bếp nổi tiếng.",
+        "correct": false
+      },
+      {
+        "text": "Vì anh muốn đi du lịch vòng quanh thế giới.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "IU: \"Em gái quốc dân\" giàu có xứ Hàn, từng trải qua tuổi thơ khó khăn",
     "content": "IU, tên thật là Lee Ji Eun, là một trong những ca sĩ và diễn viên nổi tiếng của Hàn Quốc, được biết đến với giọng hát ngọt ngào và nhiều ca khúc thành công. Mặc dù hiện tại sở hữu tài sản gần 50 triệu USD, IU đã trải qua một tuổi thơ khó khăn với nhiều thử thách, bao gồm việc bị bắt nạt và gia đình lâm vào cảnh khốn khó. Cô đã kiên trì theo đuổi ước mơ ca hát và hiện đang gây chú ý với bộ phim \"When life gives you tangerines\". IU không chỉ thành công trong sự nghiệp mà còn tích cực tham gia các hoạt động từ thiện.",
     "link": "https://dantri.com.vn/giai-tri/iu-em-gai-quoc-dan-giau-co-xu-han-tung-trai-qua-tuoi-tho-kho-khan-20250318195448529.htm",
@@ -1461,33 +1519,6 @@
       },
       {
         "text": "Chứng hoang tưởng là một triệu chứng của bệnh cảm cúm.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Bỏ việc lương cao, sang Việt Nam 'tìm ý nghĩa cuộc đời'",
-    "content": "Choi Won Jun, một người Hàn Quốc, đã từ bỏ công việc lương cao ở Seoul để tìm kiếm ý nghĩa cuộc sống tại TP HCM, Việt Nam. Sau khi trải qua cuộc sống áp lực và nhàm chán, anh quyết định học nấu ăn và mở quán thịt nướng. Jun cảm nhận được sự ấm áp, tình người và tinh thần thoải mái của người Việt Nam, điều mà anh không tìm thấy ở Hàn Quốc. Giờ đây, anh làm việc chăm chỉ nhưng cảm thấy hạnh phúc và thỏa mãn hơn nhiều với cuộc sống mới của mình.",
-    "link": "https://vnexpress.net/bo-viec-luong-cao-sang-viet-nam-tim-y-nghia-cuoc-doi-4864410.html",
-    "cat": "gia-dinh",
-    "positivity": 9,
-    "importance": 7,
-    "question": "Tại sao Choi Won Jun quyết định bỏ việc ở Hàn Quốc để sống tại Việt Nam?",
-    "answers": [
-      {
-        "text": "Vì anh muốn tìm kiếm ý nghĩa cuộc sống và hạnh phúc hơn.",
-        "correct": true
-      },
-      {
-        "text": "Vì anh muốn kiếm nhiều tiền hơn.",
-        "correct": false
-      },
-      {
-        "text": "Vì anh muốn trở thành đầu bếp nổi tiếng.",
-        "correct": false
-      },
-      {
-        "text": "Vì anh muốn đi du lịch vòng quanh thế giới.",
         "correct": false
       }
     ]
