--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -135,6 +135,33 @@
     ]
   },
   {
+    "title": "Trường ĐH Kinh tế tuyển sinh 4 chuyên ngành mới năm 2025",
+    "content": "Trường ĐH Kinh tế (ĐH Quốc gia Hà Nội) vừa công bố tuyển sinh 4 chuyên ngành mới cho năm 2025, bao gồm Kinh tế chính trị và ngoại giao, quản lý kinh tế, kinh tế số và quản lý, và kinh tế truyền thông và báo chí. Nhà trường dự kiến tuyển sinh 2.500 chỉ tiêu với tổng cộng 23 chuyên ngành. Các chuyên ngành mới này nhằm đáp ứng nhu cầu thị trường lao động trong bối cảnh chuyển đổi số và kinh tế số đang bùng nổ.",
+    "link": "https://dantri.com.vn/giao-duc/truong-dh-kinh-te-tuyen-sinh-4-chuyen-nganh-moi-nam-2025-20250322225549266.htm",
+    "cat": "giao-duc",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Trường ĐH Kinh tế có những chuyên ngành mới nào trong năm 2025?",
+    "answers": [
+      {
+        "text": "Kinh tế chính trị và ngoại giao, quản lý kinh tế, kinh tế số và quản lý, kinh tế truyền thông và báo chí",
+        "correct": true
+      },
+      {
+        "text": "Kinh tế quốc tế, quản lý nguồn nhân lực, marketing, kế toán",
+        "correct": false
+      },
+      {
+        "text": "Tài chính ngân hàng, luật kinh tế, công nghệ thông tin, thiết kế đồ họa",
+        "correct": false
+      },
+      {
+        "text": "Quản trị kinh doanh, du lịch, ngôn ngữ Anh, y tế công cộng",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Rapper Pháo tuổi 22: Nhan sắc thăng hạng, từng để đầu đinh gây sốc",
     "content": "Rapper Pháo, tên thật là Nguyễn Diệu Huyền, hiện đang thu hút sự chú ý của khán giả với ca khúc \"Sự nghiệp chướng\" đạt vị trí số một trên YouTube Việt Nam chỉ sau hai ngày ra mắt. Nữ rapper 22 tuổi không chỉ nổi bật với tài năng âm nhạc mà còn qua phong cách thời trang cá tính và những thay đổi ngoại hình nổi bật, bao gồm cả việc phẫu thuật thẩm mỹ. Cô cũng gây ấn tượng khi để đầu đinh để quyên góp tóc cho bệnh nhân ung thư và đã có nhiều trải nghiệm trong sự nghiệp âm nhạc của mình.",
     "link": "https://dantri.com.vn/giai-tri/rapper-phao-tuoi-22-nhan-sac-thang-hang-tung-de-dau-dinh-gay-soc-20250323105600594.htm",
@@ -188,37 +215,6 @@
       },
       {
         "text": "Năm 2024",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Hệ lụy 'tình một đêm'",
-    "content": "Bài viết đề cập đến hệ lụy của \"tình một đêm\", đặc biệt là ảnh hưởng đến sức khỏe tâm lý và sinh lý của nam giới. Một trường hợp cụ thể là chàng trai 29 tuổi, dù đã xét nghiệm HIV âm tính nhưng vẫn sống trong lo âu và rối loạn tình dục sau khi có quan hệ không bảo vệ. Nhiều trường hợp khác cũng cho thấy nguy cơ mắc bệnh lây truyền qua đường tình dục và những vấn đề pháp lý có thể phát sinh từ kiểu quan hệ này. Các chuyên gia khuyên rằng nam giới nên xây dựng mối quan hệ lành mạnh và luôn sử dụng biện pháp bảo vệ để giảm thiểu rủi ro.",
-    "link": "https://vnexpress.net/he-luy-tinh-mot-dem-4864695.html",
-    "cat": "suc-khoe",
-    "positivity": 3,
-    "importance": 8,
-    "question": "Hệ lụy của 'tình một đêm' ảnh hưởng đến sức khỏe như thế nào?",
-    "answers": [
-      {
-        "text": "Có thể gây rối loạn lo âu và bệnh lây truyền qua đường tình dục.",
-        "correct": true
-      },
-      {
-        "text": "Chỉ gây hại về mặt tâm lý.",
-        "correct": false
-      },
-      {
-        "text": "Không ảnh hưởng gì đến sức khỏe.",
-        "correct": false
-      },
-      {
-        "text": "Giúp cải thiện sức khỏe tâm lý.",
-        "correct": false
-      },
-      {
-        "text": "Tăng cường sức khỏe sinh lý.",
         "correct": false
       }
     ]
@@ -327,6 +323,37 @@
       },
       {
         "text": "Gây ra bệnh tim mạch nhưng không liên quan đến bệnh truyền nhiễm.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Hệ lụy 'tình một đêm'",
+    "content": "Bài viết đề cập đến hệ lụy của \"tình một đêm\", đặc biệt là ảnh hưởng đến sức khỏe tâm lý và sinh lý của nam giới. Một trường hợp cụ thể là chàng trai 29 tuổi, dù đã xét nghiệm HIV âm tính nhưng vẫn sống trong lo âu và rối loạn tình dục sau khi có quan hệ không bảo vệ. Nhiều trường hợp khác cũng cho thấy nguy cơ mắc bệnh lây truyền qua đường tình dục và những vấn đề pháp lý có thể phát sinh từ kiểu quan hệ này. Các chuyên gia khuyên rằng nam giới nên xây dựng mối quan hệ lành mạnh và luôn sử dụng biện pháp bảo vệ để giảm thiểu rủi ro.",
+    "link": "https://vnexpress.net/he-luy-tinh-mot-dem-4864695.html",
+    "cat": "suc-khoe",
+    "positivity": 3,
+    "importance": 8,
+    "question": "Hệ lụy của 'tình một đêm' ảnh hưởng đến sức khỏe như thế nào?",
+    "answers": [
+      {
+        "text": "Có thể gây rối loạn lo âu và bệnh lây truyền qua đường tình dục.",
+        "correct": true
+      },
+      {
+        "text": "Chỉ gây hại về mặt tâm lý.",
+        "correct": false
+      },
+      {
+        "text": "Không ảnh hưởng gì đến sức khỏe.",
+        "correct": false
+      },
+      {
+        "text": "Giúp cải thiện sức khỏe tâm lý.",
+        "correct": false
+      },
+      {
+        "text": "Tăng cường sức khỏe sinh lý.",
         "correct": false
       }
     ]
@@ -1395,64 +1422,6 @@
     ]
   },
   {
-    "title": "IU: \"Em gái quốc dân\" giàu có xứ Hàn, từng trải qua tuổi thơ khó khăn",
-    "content": "IU, tên thật là Lee Ji Eun, là một trong những ca sĩ và diễn viên nổi tiếng của Hàn Quốc, được biết đến với giọng hát ngọt ngào và nhiều ca khúc thành công. Mặc dù hiện tại sở hữu tài sản gần 50 triệu USD, IU đã trải qua một tuổi thơ khó khăn với nhiều thử thách, bao gồm việc bị bắt nạt và gia đình lâm vào cảnh khốn khó. Cô đã kiên trì theo đuổi ước mơ ca hát và hiện đang gây chú ý với bộ phim \"When life gives you tangerines\". IU không chỉ thành công trong sự nghiệp mà còn tích cực tham gia các hoạt động từ thiện.",
-    "link": "https://dantri.com.vn/giai-tri/iu-em-gai-quoc-dan-giau-co-xu-han-tung-trai-qua-tuoi-tho-kho-khan-20250318195448529.htm",
-    "cat": "giai-tri",
-    "positivity": 9,
-    "importance": 8,
-    "question": "IU đã trải qua những khó khăn gì trong tuổi thơ của mình?",
-    "answers": [
-      {
-        "text": "Cô từng bị bắt nạt và gia đình lâm vào cảnh khó khăn.",
-        "correct": true
-      },
-      {
-        "text": "Cô sống trong một gia đình giàu có mà không gặp khó khăn gì.",
-        "correct": false
-      },
-      {
-        "text": "Cô không có ước mơ trở thành ca sĩ.",
-        "correct": false
-      },
-      {
-        "text": "Cô luôn được hỗ trợ từ gia đình trong mọi việc.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Diện mạo Bãi Sau Vũng Tàu sau gần 5 tháng chỉnh trang",
-    "content": "Sau gần 5 tháng chỉnh trang với kinh phí khoảng 1.100 tỷ đồng, dự án chỉnh trang biển Bãi Sau Vũng Tàu đang dần hoàn thiện. Một số hạng mục, bao gồm công viên và đường đi bộ, sẽ được đưa vào sử dụng vào dịp lễ 30/4. Dự án đã hoàn thành khoảng 60% khối lượng công việc, tuy nhiên, một số đoạn còn lại bị chậm tiến độ do các vấn đề liên quan đến bàn giao mặt bằng.",
-    "link": "https://vnexpress.net/dien-mao-bai-sau-vung-tau-sau-gan-5-thang-chinh-trang-4864622.html",
-    "cat": "du-lich",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Dự án chỉnh trang biển Bãi Sau Vũng Tàu đã hoàn thiện được bao nhiêu phần trăm?",
-    "answers": [
-      {
-        "text": "60%",
-        "correct": true
-      },
-      {
-        "text": "70%",
-        "correct": false
-      },
-      {
-        "text": "50%",
-        "correct": false
-      },
-      {
-        "text": "80%",
-        "correct": false
-      },
-      {
-        "text": "90%",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Bí quyết trở thành thủ khoa toàn trường của \"bà mẹ U40\"",
     "content": "Nguyễn Song Châu, một bà mẹ U40, đã xuất sắc trở thành thủ khoa toàn trường tại Trường Đại học Gia Định với điểm trung bình 3.7/4.0. Dù phải vừa học, vừa làm và chăm sóc con nhỏ, chị vẫn kiên trì theo đuổi ước mơ học tập bằng cách sắp xếp thời gian hợp lý. Châu đã tham gia nhiều hoạt động ngoại khóa và hiện đang làm việc tại các trung tâm Anh ngữ, với mong muốn trở thành giáo viên tiếng Anh trong tương lai.",
     "link": "https://dantri.com.vn/giao-duc/bi-quyet-tro-thanh-thu-khoa-toan-truong-cua-ba-me-u40-20250322205358478.htm",
@@ -1506,6 +1475,64 @@
       },
       {
         "text": "Chứng hoang tưởng là một triệu chứng của bệnh cảm cúm.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Diện mạo Bãi Sau Vũng Tàu sau gần 5 tháng chỉnh trang",
+    "content": "Sau gần 5 tháng chỉnh trang với kinh phí khoảng 1.100 tỷ đồng, dự án chỉnh trang biển Bãi Sau Vũng Tàu đang dần hoàn thiện. Một số hạng mục, bao gồm công viên và đường đi bộ, sẽ được đưa vào sử dụng vào dịp lễ 30/4. Dự án đã hoàn thành khoảng 60% khối lượng công việc, tuy nhiên, một số đoạn còn lại bị chậm tiến độ do các vấn đề liên quan đến bàn giao mặt bằng.",
+    "link": "https://vnexpress.net/dien-mao-bai-sau-vung-tau-sau-gan-5-thang-chinh-trang-4864622.html",
+    "cat": "du-lich",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Dự án chỉnh trang biển Bãi Sau Vũng Tàu đã hoàn thiện được bao nhiêu phần trăm?",
+    "answers": [
+      {
+        "text": "60%",
+        "correct": true
+      },
+      {
+        "text": "70%",
+        "correct": false
+      },
+      {
+        "text": "50%",
+        "correct": false
+      },
+      {
+        "text": "80%",
+        "correct": false
+      },
+      {
+        "text": "90%",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "IU: \"Em gái quốc dân\" giàu có xứ Hàn, từng trải qua tuổi thơ khó khăn",
+    "content": "IU, tên thật là Lee Ji Eun, là một trong những ca sĩ và diễn viên nổi tiếng của Hàn Quốc, được biết đến với giọng hát ngọt ngào và nhiều ca khúc thành công. Mặc dù hiện tại sở hữu tài sản gần 50 triệu USD, IU đã trải qua một tuổi thơ khó khăn với nhiều thử thách, bao gồm việc bị bắt nạt và gia đình lâm vào cảnh khốn khó. Cô đã kiên trì theo đuổi ước mơ ca hát và hiện đang gây chú ý với bộ phim \"When life gives you tangerines\". IU không chỉ thành công trong sự nghiệp mà còn tích cực tham gia các hoạt động từ thiện.",
+    "link": "https://dantri.com.vn/giai-tri/iu-em-gai-quoc-dan-giau-co-xu-han-tung-trai-qua-tuoi-tho-kho-khan-20250318195448529.htm",
+    "cat": "giai-tri",
+    "positivity": 9,
+    "importance": 8,
+    "question": "IU đã trải qua những khó khăn gì trong tuổi thơ của mình?",
+    "answers": [
+      {
+        "text": "Cô từng bị bắt nạt và gia đình lâm vào cảnh khó khăn.",
+        "correct": true
+      },
+      {
+        "text": "Cô sống trong một gia đình giàu có mà không gặp khó khăn gì.",
+        "correct": false
+      },
+      {
+        "text": "Cô không có ước mơ trở thành ca sĩ.",
+        "correct": false
+      },
+      {
+        "text": "Cô luôn được hỗ trợ từ gia đình trong mọi việc.",
         "correct": false
       }
     ]
@@ -3516,33 +3543,6 @@
       },
       {
         "text": "1895",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Mang thai ở buồng trứng",
-    "content": "Một phụ nữ 32 tuổi đã được phát hiện mang thai ở buồng trứng, một tình trạng hiếm gặp trong thai ngoài tử cung. Sau khi siêu âm, bác sĩ đã tiến hành phẫu thuật nội soi để bóc tách khối thai và giữ lại buồng trứng cho bệnh nhân. Thai ngoài tử cung chiếm khoảng 2% các trường hợp mang thai, trong đó thai ở buồng trứng chỉ chiếm dưới 3%. Bác sĩ khuyến cáo phụ nữ cần thăm khám kịp thời khi có dấu hiệu nghi ngờ mang thai để tránh biến chứng nguy hiểm.",
-    "link": "https://vnexpress.net/mang-thai-o-buong-trung-4864476.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Mang thai ở buồng trứng là tình trạng gì?",
-    "answers": [
-      {
-        "text": "Thai ngoài tử cung",
-        "correct": true
-      },
-      {
-        "text": "Thai trong tử cung",
-        "correct": false
-      },
-      {
-        "text": "Thai sinh đôi",
-        "correct": false
-      },
-      {
-        "text": "Thai không có tim",
         "correct": false
       }
     ]
