Batch update of generated files

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,37 @@
     */
     const newsData = [
   {
+    "title": "Thí sinh khăn gói dự thi V-SAT đánh giá đầu vào đại học đầu tiên năm 2025",
+    "content": "Hôm nay, ngày 23/3/2025, kỳ thi V-SAT, đánh giá đầu vào đại học đầu tiên được tổ chức tại Hà Nội. Thí sinh từ nhiều tỉnh thành đã tham gia, trong đó có Cao Phương Ngọc từ Nghệ An, người đã đạt 136.5 điểm môn toán. Kỳ thi V-SAT áp dụng chương trình giáo dục phổ thông 2018, với nhiều môn thi và hình thức thi trắc nghiệm. Kỳ thi này mở ra cơ hội xét tuyển cho 19 trường đại học trên toàn quốc.",
+    "link": "https://dantri.com.vn/giao-duc/thi-sinh-khan-goi-du-thi-v-sat-danh-gia-dau-vao-dai-hoc-dau-tien-nam-2025-20250322231732234.htm",
+    "cat": "giao-duc",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Kỳ thi V-SAT năm 2025 có gì đặc biệt?",
+    "answers": [
+      {
+        "text": "Đánh giá đầu vào cho 19 trường đại học",
+        "correct": true
+      },
+      {
+        "text": "Chỉ thi môn toán và lý",
+        "correct": false
+      },
+      {
+        "text": "Không có môn ngữ văn",
+        "correct": false
+      },
+      {
+        "text": "Chỉ tổ chức tại Hà Nội",
+        "correct": false
+      },
+      {
+        "text": "Chỉ có một đợt thi duy nhất",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Dấu hiệu giảm dự trữ buồng trứng gây vô sinh",
     "content": "Bài viết đề cập đến các dấu hiệu giảm dự trữ buồng trứng, có thể dẫn đến vô sinh ở phụ nữ. Những dấu hiệu này bao gồm chu kỳ kinh nguyệt không đều, giảm ham muốn tình dục, mất ngủ và bốc hỏa. Tình trạng giảm dự trữ buồng trứng có thể xảy ra ở phụ nữ sau 35 tuổi hoặc phụ nữ trẻ tuổi do nhiều nguyên nhân khác nhau. Việc phát hiện sớm tình trạng này là rất quan trọng để có biện pháp điều trị kịp thời và bảo tồn khả năng sinh sản.",
     "link": "https://vnexpress.net/dau-hieu-giam-du-tru-buong-trung-gay-vo-sinh-4864667.html",
@@ -1897,33 +1928,6 @@
     ]
   },
   {
-    "title": "Chiến sự Ukraine 23/3: Kiev thất bại nặng nề ở Kursk, rút lui hỗn loạn",
-    "content": "Trong cuộc chiến tại Kursk, Ukraine đã gặp thất bại nặng nề, buộc họ phải rút lui hỗn loạn khỏi các làng Oleshnya và Gogolevka. Các nguồn tin cho biết chiến lược của NATO đã không thể giúp Ukraine vượt qua quân đội Nga, dẫn đến tình trạng bất ổn và thiệt hại lớn cho Kiev. Những phân tích từ các chuyên gia quốc tế đều đồng tình rằng đây là một thất bại nghiêm trọng về mặt vật chất đối với Ukraine.",
-    "link": "https://dantri.com.vn/the-gioi/chien-su-ukraine-233-kiev-that-bai-nang-ne-o-kursk-rut-lui-hon-loan-20250323062656449.htm",
-    "cat": "thoi-su",
-    "positivity": 2,
-    "importance": 8,
-    "question": "Tại sao Ukraine lại thất bại ở Kursk?",
-    "answers": [
-      {
-        "text": "Vì chiến thuật không hiệu quả của NATO",
-        "correct": true
-      },
-      {
-        "text": "Do thiếu vũ khí",
-        "correct": false
-      },
-      {
-        "text": "Vì quân đội Nga mạnh hơn",
-        "correct": false
-      },
-      {
-        "text": "Do địa hình khó khăn",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Chiến sự Ukraine 23/3: Kiev \"tất tay\", dốc toàn lực tấn công Belgorod",
     "content": "Vào ngày 23/3/2025, Ukraine đã quyết định dốc toàn lực tấn công vào tỉnh Belgorod, thể hiện qua việc triển khai các phương tiện chiến đấu hiện đại. Hành động này cho thấy sự chuẩn bị kỹ lưỡng và quyết tâm của Kiev trong việc giành lại quyền kiểm soát khu vực. Trong khi đó, tình hình tại Kursk trở nên phức tạp khi quân đội Ukraine có thể sẽ rút lui khỏi một số làng do thất bại trong các chiến dịch tấn công.",
     "link": "https://dantri.com.vn/the-gioi/chien-su-ukraine-233-kiev-tat-tay-doc-toan-luc-tan-cong-belgorod-20250323062656449.htm",
@@ -1946,6 +1950,33 @@
       },
       {
         "text": "Để tổ chức các cuộc diễn tập quân sự lớn.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Chiến sự Ukraine 23/3: Kiev thất bại nặng nề ở Kursk, rút lui hỗn loạn",
+    "content": "Trong cuộc chiến tại Kursk, Ukraine đã gặp thất bại nặng nề, buộc họ phải rút lui hỗn loạn khỏi các làng Oleshnya và Gogolevka. Các nguồn tin cho biết chiến lược của NATO đã không thể giúp Ukraine vượt qua quân đội Nga, dẫn đến tình trạng bất ổn và thiệt hại lớn cho Kiev. Những phân tích từ các chuyên gia quốc tế đều đồng tình rằng đây là một thất bại nghiêm trọng về mặt vật chất đối với Ukraine.",
+    "link": "https://dantri.com.vn/the-gioi/chien-su-ukraine-233-kiev-that-bai-nang-ne-o-kursk-rut-lui-hon-loan-20250323062656449.htm",
+    "cat": "thoi-su",
+    "positivity": 2,
+    "importance": 8,
+    "question": "Tại sao Ukraine lại thất bại ở Kursk?",
+    "answers": [
+      {
+        "text": "Vì chiến thuật không hiệu quả của NATO",
+        "correct": true
+      },
+      {
+        "text": "Do thiếu vũ khí",
+        "correct": false
+      },
+      {
+        "text": "Vì quân đội Nga mạnh hơn",
+        "correct": false
+      },
+      {
+        "text": "Do địa hình khó khăn",
         "correct": false
       }
     ]
@@ -2040,33 +2071,6 @@
     ]
   },
   {
-    "title": "Bỏ việc lương cao, sang Việt Nam 'tìm ý nghĩa cuộc đời'",
-    "content": "Choi Won Jun, một người Hàn Quốc, đã từ bỏ công việc lương cao ở Seoul để tìm kiếm ý nghĩa cuộc sống tại TP HCM, Việt Nam. Sau khi trải qua cuộc sống áp lực và nhàm chán, anh quyết định học nấu ăn và mở quán thịt nướng. Jun cảm nhận được sự ấm áp, tình người và tinh thần thoải mái của người Việt Nam, điều mà anh không tìm thấy ở Hàn Quốc. Giờ đây, anh làm việc chăm chỉ nhưng cảm thấy hạnh phúc và thỏa mãn hơn nhiều với cuộc sống mới của mình.",
-    "link": "https://vnexpress.net/bo-viec-luong-cao-sang-viet-nam-tim-y-nghia-cuoc-doi-4864410.html",
-    "cat": "gia-dinh",
-    "positivity": 9,
-    "importance": 7,
-    "question": "Tại sao Choi Won Jun quyết định bỏ việc ở Hàn Quốc để sống tại Việt Nam?",
-    "answers": [
-      {
-        "text": "Vì anh muốn tìm kiếm ý nghĩa cuộc sống và hạnh phúc hơn.",
-        "correct": true
-      },
-      {
-        "text": "Vì anh muốn kiếm nhiều tiền hơn.",
-        "correct": false
-      },
-      {
-        "text": "Vì anh muốn trở thành đầu bếp nổi tiếng.",
-        "correct": false
-      },
-      {
-        "text": "Vì anh muốn đi du lịch vòng quanh thế giới.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Chứng hoang tưởng",
     "content": "Chứng hoang tưởng là tình trạng tâm lý liên quan đến cảm giác nghi ngờ và sợ hãi về người khác mà không có căn cứ thực tế. Triệu chứng có thể bao gồm sự nghi ngờ dữ dội, cảm giác bị đe dọa, và khó khăn trong việc thư giãn. Chứng hoang tưởng thường liên quan đến các rối loạn tâm thần khác và có thể được điều trị bằng liệu pháp tâm lý và thuốc. Nếu không được kiểm soát, tình trạng này có thể dẫn đến những biến chứng nghiêm trọng và hành vi gây nguy hiểm.",
     "link": "https://vnexpress.net/chung-hoang-tuong-4863575.html",
@@ -2089,6 +2093,33 @@
       },
       {
         "text": "Chứng hoang tưởng là một triệu chứng của bệnh cảm cúm.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Bỏ việc lương cao, sang Việt Nam 'tìm ý nghĩa cuộc đời'",
+    "content": "Choi Won Jun, một người Hàn Quốc, đã từ bỏ công việc lương cao ở Seoul để tìm kiếm ý nghĩa cuộc sống tại TP HCM, Việt Nam. Sau khi trải qua cuộc sống áp lực và nhàm chán, anh quyết định học nấu ăn và mở quán thịt nướng. Jun cảm nhận được sự ấm áp, tình người và tinh thần thoải mái của người Việt Nam, điều mà anh không tìm thấy ở Hàn Quốc. Giờ đây, anh làm việc chăm chỉ nhưng cảm thấy hạnh phúc và thỏa mãn hơn nhiều với cuộc sống mới của mình.",
+    "link": "https://vnexpress.net/bo-viec-luong-cao-sang-viet-nam-tim-y-nghia-cuoc-doi-4864410.html",
+    "cat": "gia-dinh",
+    "positivity": 9,
+    "importance": 7,
+    "question": "Tại sao Choi Won Jun quyết định bỏ việc ở Hàn Quốc để sống tại Việt Nam?",
+    "answers": [
+      {
+        "text": "Vì anh muốn tìm kiếm ý nghĩa cuộc sống và hạnh phúc hơn.",
+        "correct": true
+      },
+      {
+        "text": "Vì anh muốn kiếm nhiều tiền hơn.",
+        "correct": false
+      },
+      {
+        "text": "Vì anh muốn trở thành đầu bếp nổi tiếng.",
+        "correct": false
+      },
+      {
+        "text": "Vì anh muốn đi du lịch vòng quanh thế giới.",
         "correct": false
       }
     ]
@@ -3231,33 +3262,6 @@
     ]
   },
   {
-    "title": "Thuốc đích, miễn dịch có thay hóa trị ung thư vú được không?",
-    "content": "Bài viết thảo luận về việc liệu liệu pháp thuốc đích và miễn dịch có thể thay thế hóa trị trong điều trị ung thư vú hay không. Theo bác sĩ, thuốc đích và liệu pháp miễn dịch là những phương pháp mới có thể giúp giảm tác dụng phụ so với hóa trị, nhưng chúng không thể hoàn toàn thay thế hóa trị. Việc điều trị sẽ phụ thuộc vào đặc điểm sinh học của từng bệnh nhân và tình trạng bệnh. Tùy thuộc vào từng trường hợp cụ thể, bác sĩ sẽ quyết định phương pháp phù hợp để tối ưu hiệu quả điều trị.",
-    "link": "https://vnexpress.net/thuoc-dich-mien-dich-co-thay-hoa-tri-ung-thu-vu-duoc-khong-4864508.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Liệu pháp thuốc đích và miễn dịch có thể thay thế hóa trị trong điều trị ung thư vú không?",
-    "answers": [
-      {
-        "text": "Không hoàn toàn thay thế",
-        "correct": true
-      },
-      {
-        "text": "Có thể thay thế hoàn toàn",
-        "correct": false
-      },
-      {
-        "text": "Chỉ dùng cho giai đoạn cuối",
-        "correct": false
-      },
-      {
-        "text": "Không áp dụng cho mọi bệnh nhân",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Sinh con đầu lòng ở tuổi 54",
     "content": "Một người phụ nữ 54 tuổi, mắc bệnh lạc nội mạc và có tử cung xơ hóa hoàn toàn, đã mang thai thành công nhờ thụ tinh ống nghiệm (IVF). Tuy nhiên, thai kỳ của bà gặp nhiều biến chứng, dẫn đến ca sinh mổ khó khăn. Các bác sĩ đã phải can thiệp phẫu thuật sâu để đưa em bé ra, và cuối cùng, một bé trai nặng 2,1 kg đã chào đời khỏe mạnh. Hiện tại, sức khỏe của cả mẹ và con đều ổn định, được xem là một kỳ tích trong y học.",
     "link": "https://vnexpress.net/sinh-con-dau-long-o-tuoi-54-4864546.html",
@@ -3280,6 +3284,33 @@
       },
       {
         "text": "Bằng cách nhận con nuôi",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Thuốc đích, miễn dịch có thay hóa trị ung thư vú được không?",
+    "content": "Bài viết thảo luận về việc liệu liệu pháp thuốc đích và miễn dịch có thể thay thế hóa trị trong điều trị ung thư vú hay không. Theo bác sĩ, thuốc đích và liệu pháp miễn dịch là những phương pháp mới có thể giúp giảm tác dụng phụ so với hóa trị, nhưng chúng không thể hoàn toàn thay thế hóa trị. Việc điều trị sẽ phụ thuộc vào đặc điểm sinh học của từng bệnh nhân và tình trạng bệnh. Tùy thuộc vào từng trường hợp cụ thể, bác sĩ sẽ quyết định phương pháp phù hợp để tối ưu hiệu quả điều trị.",
+    "link": "https://vnexpress.net/thuoc-dich-mien-dich-co-thay-hoa-tri-ung-thu-vu-duoc-khong-4864508.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Liệu pháp thuốc đích và miễn dịch có thể thay thế hóa trị trong điều trị ung thư vú không?",
+    "answers": [
+      {
+        "text": "Không hoàn toàn thay thế",
+        "correct": true
+      },
+      {
+        "text": "Có thể thay thế hoàn toàn",
+        "correct": false
+      },
+      {
+        "text": "Chỉ dùng cho giai đoạn cuối",
+        "correct": false
+      },
+      {
+        "text": "Không áp dụng cho mọi bệnh nhân",
         "correct": false
       }
     ]
@@ -3745,33 +3776,6 @@
     ]
   },
   {
-    "title": "Bị suy thận có thể chơi pickleball không?",
-    "content": "Người bị suy thận mạn giai đoạn hai như bạn cần thận trọng khi tham gia các hoạt động thể thao như pickleball. Mặc dù môn này có nhiều lợi ích cho sức khỏe, nhưng cũng đi kèm với nguy cơ chấn thương cao. Trước khi tiếp tục chơi, bạn nên tham khảo ý kiến bác sĩ để đảm bảo an toàn cho sức khỏe của mình.",
-    "link": "https://vnexpress.net/bi-suy-than-co-the-choi-pickleball-khong-4864511.html",
-    "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 7,
-    "question": "Người bị suy thận có thể tiếp tục chơi pickleball không?",
-    "answers": [
-      {
-        "text": "Nên tham khảo ý kiến bác sĩ trước khi chơi.",
-        "correct": true
-      },
-      {
-        "text": "Có thể chơi mà không cần lo lắng gì.",
-        "correct": false
-      },
-      {
-        "text": "Chơi bình thường như trước đây.",
-        "correct": false
-      },
-      {
-        "text": "Không nên chơi bất kỳ môn thể thao nào.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Cặp đôi đồng tính muốn có con nên làm gì?",
     "content": "Cặp đôi đồng tính có thể có con thông qua các phương pháp hỗ trợ sinh sản hiện đại như thụ tinh nhân tạo (IUI) và thụ tinh trong ống nghiệm (IVF). Những cặp đồng tính nữ có thể xin tinh trùng từ ngân hàng và thực hiện IUI, trong khi cặp đồng tính nam có thể phải chờ đợi các quy định pháp luật cho phép mang thai hộ. Bài viết cũng nhấn mạnh tầm quan trọng của việc tư vấn tâm lý cho bệnh nhân trong quá trình điều trị IVF.",
     "link": "https://vnexpress.net/cap-doi-dong-tinh-muon-co-con-nen-lam-gi-4864488.html",
@@ -3798,6 +3802,33 @@
       },
       {
         "text": "Chờ đợi pháp luật cho phép mang thai hộ",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Bị suy thận có thể chơi pickleball không?",
+    "content": "Người bị suy thận mạn giai đoạn hai như bạn cần thận trọng khi tham gia các hoạt động thể thao như pickleball. Mặc dù môn này có nhiều lợi ích cho sức khỏe, nhưng cũng đi kèm với nguy cơ chấn thương cao. Trước khi tiếp tục chơi, bạn nên tham khảo ý kiến bác sĩ để đảm bảo an toàn cho sức khỏe của mình.",
+    "link": "https://vnexpress.net/bi-suy-than-co-the-choi-pickleball-khong-4864511.html",
+    "cat": "suc-khoe",
+    "positivity": 6,
+    "importance": 7,
+    "question": "Người bị suy thận có thể tiếp tục chơi pickleball không?",
+    "answers": [
+      {
+        "text": "Nên tham khảo ý kiến bác sĩ trước khi chơi.",
+        "correct": true
+      },
+      {
+        "text": "Có thể chơi mà không cần lo lắng gì.",
+        "correct": false
+      },
+      {
+        "text": "Chơi bình thường như trước đây.",
+        "correct": false
+      },
+      {
+        "text": "Không nên chơi bất kỳ môn thể thao nào.",
         "correct": false
       }
     ]
@@ -3883,37 +3914,6 @@
       },
       {
         "text": "Chính sách hỗ trợ vay mua nhà của ngân hàng.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Kim Soo Hyun được bảo vệ nghiêm ngặt trong lần đầu lộ diện",
-    "content": "Kim Soo Hyun sẽ tham gia Lễ hội hoa anh đào tại Đài Loan vào ngày 30/3 tới, với sự bảo vệ nghiêm ngặt từ khoảng 50 cảnh sát. Sự kiện diễn ra sau khi nam diễn viên bị ảnh hưởng nghiêm trọng từ bê bối tình cảm gần đây, khiến công ty quản lý phải đứng ra phát ngôn thay anh. Kim Soo Hyun đã mất nhiều hợp đồng quảng cáo và dự án phim do scandal này, và anh sẽ phải bồi thường nếu không xuất hiện tại sự kiện.",
-    "link": "https://dantri.com.vn/giai-tri/kim-soo-hyun-duoc-bao-ve-nghiem-ngat-trong-lan-dau-lo-dien-20250322113549010.htm",
-    "cat": "giai-tri",
-    "positivity": 3,
-    "importance": 7,
-    "question": "Kim Soo Hyun sẽ tham gia sự kiện nào vào ngày 30/3 tới?",
-    "answers": [
-      {
-        "text": "Lễ hội hoa anh đào tại Đài Loan",
-        "correct": true
-      },
-      {
-        "text": "Liên hoan phim Cannes",
-        "correct": false
-      },
-      {
-        "text": "Buổi ra mắt bộ phim mới",
-        "correct": false
-      },
-      {
-        "text": "Lễ trao giải thưởng nghệ thuật",
-        "correct": false
-      },
-      {
-        "text": "Hội thảo về điện ảnh",
         "correct": false
       }
     ]
