--- a/home.html
+++ b/home.html
@@ -206,6 +206,33 @@
     ]
   },
   {
+    "title": "Mỹ tiết lộ vấn đề lớn nhất trong xung đột Nga - Ukraine",
+    "content": "Đặc phái viên của Tổng thống Mỹ Donald Trump, ông Steve Witkoff, đã chỉ ra rằng vấn đề lớn nhất trong xung đột Nga - Ukraine là tình trạng pháp lý của bán đảo Crimea và bốn tỉnh Donetsk, Lugansk, Kherson, Zaporizhia. Ông nhấn mạnh rằng các cuộc trưng cầu dân ý ở những vùng này cho thấy người dân muốn nằm dưới sự lãnh đạo của Nga. Hiện tại, Nga kiểm soát gần 20% lãnh thổ Ukraine và bất kỳ thỏa thuận hòa bình nào với Ukraine sẽ phải tính đến thực tế mới này.",
+    "link": "https://dantri.com.vn/the-gioi/my-tiet-lo-van-de-lon-nhat-trong-xung-dot-nga-ukraine-20250323160028746.htm",
+    "cat": "the-gioi",
+    "positivity": 4,
+    "importance": 9,
+    "question": "Vấn đề lớn nhất trong xung đột Nga - Ukraine theo Mỹ là gì?",
+    "answers": [
+      {
+        "text": "Tình trạng pháp lý của bán đảo Crimea và các tỉnh Donetsk, Lugansk, Kherson, Zaporizhia.",
+        "correct": true
+      },
+      {
+        "text": "Sự can thiệp của NATO vào xung đột.",
+        "correct": false
+      },
+      {
+        "text": "Tình hình kinh tế của Ukraine.",
+        "correct": false
+      },
+      {
+        "text": "Quân đội Ukraine thiếu thiết bị hiện đại.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Bị phạt vì lái valy điện trên đường trung tâm TP HCM",
     "content": "Một người phụ nữ 43 tuổi đã bị phạt 225.000 đồng vì lái valy điện trên đường Lê Duẩn, quận 1, TP HCM. CSGT phát hiện và lập biên bản xử phạt vì phương tiện này vi phạm luật giao thông, gây nguy hiểm khi di chuyển trên đường. Trước đó, một người đàn ông Trung Quốc cũng đã bị phát hiện lái valy điện nhưng không thể xử lý do đã xuất cảnh.",
     "link": "https://vnexpress.net/bi-phat-vi-lai-valy-dien-tren-duong-trung-tam-tp-hcm-4864811.html",
@@ -1856,28 +1883,32 @@
     ]
   },
   {
-    "title": "Lợi ích khi ăn các loại hạt buổi sáng",
-    "content": "Ăn các loại hạt vào bữa sáng mang lại nhiều lợi ích cho sức khỏe như cung cấp chất dinh dưỡng, giảm nguy cơ mắc bệnh tim, hỗ trợ tiêu hóa và giúp kiểm soát cân nặng. Các loại hạt như hạt chia, óc chó và hạnh nhân rất giàu chất béo lành mạnh, protein và chất xơ, giúp duy trì năng lượng và cảm giác no lâu. Bữa sáng với các loại hạt còn cung cấp nhiều vitamin và khoáng chất cần thiết cho cơ thể, từ đó góp phần nâng cao sức khỏe tổng thể.",
-    "link": "https://vnexpress.net/loi-ich-khi-an-cac-loai-hat-buoi-sang-4864646.html",
+    "title": "Nguyên nhân khiến trẻ nôn trớ",
+    "content": "Trẻ sơ sinh dễ bị nôn trớ do hệ tiêu hóa chưa hoàn thiện, bú quá no hoặc một số bệnh lý đường tiêu hóa. Nôn trớ thường là tình trạng lành tính và có thể tự khỏi khi trẻ lớn hơn. Tuy nhiên, nếu tình trạng này kéo dài kèm theo các dấu hiệu bất thường như chậm tăng cân hay sốt cao, cha mẹ nên đưa trẻ đi khám. Nguyên nhân nôn trớ có thể bao gồm trào ngược dạ dày thực quản, dị ứng sữa hoặc nhiễm trùng tiêu hóa.",
+    "link": "https://vnexpress.net/nguyen-nhan-khien-tre-non-tro-4864611.html",
     "cat": "suc-khoe",
-    "positivity": 9,
+    "positivity": 7,
     "importance": 8,
-    "question": "Lợi ích của việc ăn các loại hạt vào buổi sáng là gì?",
+    "question": "Tại sao trẻ sơ sinh lại bị nôn trớ?",
     "answers": [
       {
-        "text": "Giảm nguy cơ mắc bệnh tim và hỗ trợ tiêu hóa.",
+        "text": "Do hệ tiêu hóa chưa hoàn thiện",
         "correct": true
       },
       {
-        "text": "Chỉ cung cấp calo mà không có dinh dưỡng.",
+        "text": "Do trẻ ăn quá nhiều",
         "correct": false
       },
       {
-        "text": "Không có lợi ích gì cho sức khỏe.",
+        "text": "Do trẻ không được bú sữa",
         "correct": false
       },
       {
-        "text": "Làm tăng cảm giác đói nhanh hơn.",
+        "text": "Do trẻ bị sốt cao",
+        "correct": false
+      },
+      {
+        "text": "Do trẻ không ăn uống đầy đủ",
         "correct": false
       }
     ]
@@ -1914,32 +1945,28 @@
     ]
   },
   {
-    "title": "Nguyên nhân khiến trẻ nôn trớ",
-    "content": "Trẻ sơ sinh dễ bị nôn trớ do hệ tiêu hóa chưa hoàn thiện, bú quá no hoặc một số bệnh lý đường tiêu hóa. Nôn trớ thường là tình trạng lành tính và có thể tự khỏi khi trẻ lớn hơn. Tuy nhiên, nếu tình trạng này kéo dài kèm theo các dấu hiệu bất thường như chậm tăng cân hay sốt cao, cha mẹ nên đưa trẻ đi khám. Nguyên nhân nôn trớ có thể bao gồm trào ngược dạ dày thực quản, dị ứng sữa hoặc nhiễm trùng tiêu hóa.",
-    "link": "https://vnexpress.net/nguyen-nhan-khien-tre-non-tro-4864611.html",
+    "title": "Lợi ích khi ăn các loại hạt buổi sáng",
+    "content": "Ăn các loại hạt vào bữa sáng mang lại nhiều lợi ích cho sức khỏe như cung cấp chất dinh dưỡng, giảm nguy cơ mắc bệnh tim, hỗ trợ tiêu hóa và giúp kiểm soát cân nặng. Các loại hạt như hạt chia, óc chó và hạnh nhân rất giàu chất béo lành mạnh, protein và chất xơ, giúp duy trì năng lượng và cảm giác no lâu. Bữa sáng với các loại hạt còn cung cấp nhiều vitamin và khoáng chất cần thiết cho cơ thể, từ đó góp phần nâng cao sức khỏe tổng thể.",
+    "link": "https://vnexpress.net/loi-ich-khi-an-cac-loai-hat-buoi-sang-4864646.html",
     "cat": "suc-khoe",
-    "positivity": 7,
+    "positivity": 9,
     "importance": 8,
-    "question": "Tại sao trẻ sơ sinh lại bị nôn trớ?",
+    "question": "Lợi ích của việc ăn các loại hạt vào buổi sáng là gì?",
     "answers": [
       {
-        "text": "Do hệ tiêu hóa chưa hoàn thiện",
+        "text": "Giảm nguy cơ mắc bệnh tim và hỗ trợ tiêu hóa.",
         "correct": true
       },
       {
-        "text": "Do trẻ ăn quá nhiều",
+        "text": "Chỉ cung cấp calo mà không có dinh dưỡng.",
         "correct": false
       },
       {
-        "text": "Do trẻ không được bú sữa",
+        "text": "Không có lợi ích gì cho sức khỏe.",
         "correct": false
       },
       {
-        "text": "Do trẻ bị sốt cao",
-        "correct": false
-      },
-      {
-        "text": "Do trẻ không ăn uống đầy đủ",
+        "text": "Làm tăng cảm giác đói nhanh hơn.",
         "correct": false
       }
     ]
