--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -81,6 +81,33 @@
     // Example JSON array with news objects
     const newsData = [
   {
+    "title": "Hà Nội: Hai nữ giáo viên bị hủy kết quả trúng tuyển viên chức",
+    "content": "UBND quận Thanh Xuân đã hủy bỏ kết quả trúng tuyển viên chức của hai nữ giáo viên, L.A.H. và B.T.H. Cô L.A.H. bị hủy kết quả do không hoàn thiện hồ sơ trong thời gian quy định, trong khi cô B.T.H. đã tự nguyện nộp đơn xin hủy kết quả tuyển dụng. Hiện tại, các quận huyện tại Hà Nội đang tiến hành tuyển dụng viên chức giáo dục với hàng trăm chỉ tiêu còn lại.",
+    "link": "https://dantri.com.vn/giao-duc/ha-noi-hai-nu-giao-vien-bi-huy-ket-qua-trung-tuyen-vien-chuc-20250323172359219.htm",
+    "cat": "giao-duc",
+    "positivity": 4,
+    "importance": 6,
+    "question": "Tại sao kết quả trúng tuyển viên chức của hai nữ giáo viên bị hủy?",
+    "answers": [
+      {
+        "text": "Cô L.A.H. không hoàn thiện hồ sơ đúng hạn và cô B.T.H. xin hủy kết quả",
+        "correct": true
+      },
+      {
+        "text": "Hai cô giáo không đủ điều kiện dự tuyển",
+        "correct": false
+      },
+      {
+        "text": "Kết quả thi không đạt yêu cầu",
+        "correct": false
+      },
+      {
+        "text": "Có vấn đề trong quy trình tuyển dụng",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Chả lá lốt kiểu Hải Phòng",
     "content": "Chả lá lốt kiểu Hải Phòng là món ăn đặc trưng với lớp vỏ bên ngoài hơi xém và màu xanh đẹp mắt, nhân bên trong gồm thịt xay mềm, ngọt và mộc nhĩ sần sật. Để làm món ăn này, cần chuẩn bị nguyên liệu như thịt vai, lá lốt, mộc nhĩ và gia vị. Sau khi trộn đều và gói lại, chả được chiên hoặc hấp sơ để giữ được độ mềm và hương vị thơm ngon. Món ăn thường được ăn kèm với rau muống luộc và nước mắm chấm tỏi ớt, rất được yêu thích tại Hải Phòng.",
     "link": "https://vnexpress.net/cha-la-lot-kieu-hai-phong-4864805.html",
@@ -962,6 +989,33 @@
     ]
   },
   {
+    "title": "5 gia vị, thảo mộc giúp tăng đề kháng hô hấp",
+    "content": "Bài viết giới thiệu 5 loại gia vị và thảo mộc có tác dụng tăng cường đề kháng hô hấp, bao gồm húng quế, gừng, nghệ, ớt cay và tỏi. Những loại gia vị này có đặc tính kháng khuẩn, chống viêm và giúp cải thiện hệ thống miễn dịch, từ đó giảm nguy cơ mắc các bệnh nhiễm trùng hô hấp. Cụ thể, húng quế và gừng có khả năng chống virus, trong khi tỏi và nghệ cũng cung cấp nhiều lợi ích cho sức khỏe hô hấp.",
+    "link": "https://vnexpress.net/5-gia-vi-thao-moc-giup-tang-de-khang-ho-hap-4864656.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Những gia vị nào giúp tăng đề kháng hô hấp?",
+    "answers": [
+      {
+        "text": "Húng quế, gừng, nghệ, ớt cay và tỏi",
+        "correct": true
+      },
+      {
+        "text": "Chanh, dưa hấu, xoài",
+        "correct": false
+      },
+      {
+        "text": "Cà chua, khoai tây, hành tây",
+        "correct": false
+      },
+      {
+        "text": "Bông cải xanh, bắp cải, đậu xanh",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Bác bảo vệ gây sốt vì khéo dỗ bé gái chờ mẹ đến đón muộn",
     "content": "Bác bảo vệ Liu Jie, làm việc tại một trường mẫu giáo ở Sơn Đông, Trung Quốc, đã thu hút sự chú ý trên mạng xã hội khi ân cần dỗ dành bé gái Tiểu Đào đang chờ mẹ đến đón muộn. Khi thấy Tiểu Đào buồn bã, bác Liu đã bế bé và thực hiện một điệu nhảy vui vẻ để làm cô bé vui trở lại. Hành động này không chỉ giúp Tiểu Đào cảm thấy hạnh phúc mà còn thể hiện sự quan tâm và tình yêu thương của bác bảo vệ đối với trẻ nhỏ.",
     "link": "https://dantri.com.vn/giao-duc/bac-bao-ve-gay-sot-vi-kheo-do-be-gai-cho-me-den-don-muon-20250319110703515.htm",
@@ -988,33 +1042,6 @@
       },
       {
         "text": "Chơi trò chơi điện tử với bé",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "5 gia vị, thảo mộc giúp tăng đề kháng hô hấp",
-    "content": "Bài viết giới thiệu 5 loại gia vị và thảo mộc có tác dụng tăng cường đề kháng hô hấp, bao gồm húng quế, gừng, nghệ, ớt cay và tỏi. Những loại gia vị này có đặc tính kháng khuẩn, chống viêm và giúp cải thiện hệ thống miễn dịch, từ đó giảm nguy cơ mắc các bệnh nhiễm trùng hô hấp. Cụ thể, húng quế và gừng có khả năng chống virus, trong khi tỏi và nghệ cũng cung cấp nhiều lợi ích cho sức khỏe hô hấp.",
-    "link": "https://vnexpress.net/5-gia-vi-thao-moc-giup-tang-de-khang-ho-hap-4864656.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Những gia vị nào giúp tăng đề kháng hô hấp?",
-    "answers": [
-      {
-        "text": "Húng quế, gừng, nghệ, ớt cay và tỏi",
-        "correct": true
-      },
-      {
-        "text": "Chanh, dưa hấu, xoài",
-        "correct": false
-      },
-      {
-        "text": "Cà chua, khoai tây, hành tây",
-        "correct": false
-      },
-      {
-        "text": "Bông cải xanh, bắp cải, đậu xanh",
         "correct": false
       }
     ]
@@ -1549,33 +1576,6 @@
     ]
   },
   {
-    "title": "Nguyên nhân gây cứng khớp",
-    "content": "Cứng khớp là triệu chứng phổ biến do nhiều nguyên nhân khác nhau, bao gồm tư thế không đúng, thoái hóa khớp, viêm khớp, và bệnh gout. Thoái hóa khớp là nguyên nhân chính, dẫn đến đau và hạn chế vận động do sự bào mòn sụn khớp. Các bệnh viêm khớp, như viêm khớp dạng thấp và viêm cột sống dính khớp, cũng gây ra tình trạng cứng khớp, đặc biệt là vào buổi sáng. Chấn thương khớp và chế độ ăn uống kém cũng góp phần làm tăng nguy cơ cứng khớp.",
-    "link": "https://vnexpress.net/nguyen-nhan-gay-cung-khop-4864539.html",
-    "cat": "suc-khoe",
-    "positivity": 4,
-    "importance": 7,
-    "question": "Cứng khớp thường xảy ra do những nguyên nhân nào?",
-    "answers": [
-      {
-        "text": "Thoái hóa khớp, viêm khớp, và bệnh gout",
-        "correct": true
-      },
-      {
-        "text": "Chỉ do chấn thương",
-        "correct": false
-      },
-      {
-        "text": "Do chế độ ăn uống không đủ dinh dưỡng",
-        "correct": false
-      },
-      {
-        "text": "Chỉ do tuổi tác cao",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "6 món ăn người tiểu đường nên tránh",
     "content": "Bài viết nêu rõ 6 món ăn mà người tiểu đường nên tránh để kiểm soát đường huyết. Những món ăn này bao gồm thực phẩm giàu tinh bột tinh chế, kẹo ngọt, trái cây sấy khô, thịt mỡ, thực phẩm chiên, và sữa nguyên kem. Việc tránh xa những thực phẩm này có thể giúp người tiểu đường duy trì sức khỏe tốt hơn và giảm nguy cơ biến chứng. Thay vào đó, người bệnh nên lựa chọn các thực phẩm như trái cây ít ngọt và ngũ cốc nguyên hạt để có lợi cho sức khỏe.",
     "link": "https://vnexpress.net/6-mon-an-nguoi-tieu-duong-nen-tranh-4864505.html",
@@ -1598,6 +1598,33 @@
       },
       {
         "text": "Chỉ uống nước ngọt không đường",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Nguyên nhân gây cứng khớp",
+    "content": "Cứng khớp là triệu chứng phổ biến do nhiều nguyên nhân khác nhau, bao gồm tư thế không đúng, thoái hóa khớp, viêm khớp, và bệnh gout. Thoái hóa khớp là nguyên nhân chính, dẫn đến đau và hạn chế vận động do sự bào mòn sụn khớp. Các bệnh viêm khớp, như viêm khớp dạng thấp và viêm cột sống dính khớp, cũng gây ra tình trạng cứng khớp, đặc biệt là vào buổi sáng. Chấn thương khớp và chế độ ăn uống kém cũng góp phần làm tăng nguy cơ cứng khớp.",
+    "link": "https://vnexpress.net/nguyen-nhan-gay-cung-khop-4864539.html",
+    "cat": "suc-khoe",
+    "positivity": 4,
+    "importance": 7,
+    "question": "Cứng khớp thường xảy ra do những nguyên nhân nào?",
+    "answers": [
+      {
+        "text": "Thoái hóa khớp, viêm khớp, và bệnh gout",
+        "correct": true
+      },
+      {
+        "text": "Chỉ do chấn thương",
+        "correct": false
+      },
+      {
+        "text": "Do chế độ ăn uống không đủ dinh dưỡng",
+        "correct": false
+      },
+      {
+        "text": "Chỉ do tuổi tác cao",
         "correct": false
       }
     ]
@@ -2388,6 +2415,33 @@
     ]
   },
   {
+    "title": "IU: \"Em gái quốc dân\" giàu có xứ Hàn, từng trải qua tuổi thơ khó khăn",
+    "content": "IU, tên thật là Lee Ji Eun, là một trong những ca sĩ và diễn viên nổi tiếng của Hàn Quốc, được biết đến với giọng hát ngọt ngào và nhiều ca khúc thành công. Mặc dù hiện tại sở hữu tài sản gần 50 triệu USD, IU đã trải qua một tuổi thơ khó khăn với nhiều thử thách, bao gồm việc bị bắt nạt và gia đình lâm vào cảnh khốn khó. Cô đã kiên trì theo đuổi ước mơ ca hát và hiện đang gây chú ý với bộ phim \"When life gives you tangerines\". IU không chỉ thành công trong sự nghiệp mà còn tích cực tham gia các hoạt động từ thiện.",
+    "link": "https://dantri.com.vn/giai-tri/iu-em-gai-quoc-dan-giau-co-xu-han-tung-trai-qua-tuoi-tho-kho-khan-20250318195448529.htm",
+    "cat": "giai-tri",
+    "positivity": 9,
+    "importance": 8,
+    "question": "IU đã trải qua những khó khăn gì trong tuổi thơ của mình?",
+    "answers": [
+      {
+        "text": "Cô từng bị bắt nạt và gia đình lâm vào cảnh khó khăn.",
+        "correct": true
+      },
+      {
+        "text": "Cô sống trong một gia đình giàu có mà không gặp khó khăn gì.",
+        "correct": false
+      },
+      {
+        "text": "Cô không có ước mơ trở thành ca sĩ.",
+        "correct": false
+      },
+      {
+        "text": "Cô luôn được hỗ trợ từ gia đình trong mọi việc.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Diện mạo Bãi Sau Vũng Tàu sau gần 5 tháng chỉnh trang",
     "content": "Sau gần 5 tháng chỉnh trang với kinh phí khoảng 1.100 tỷ đồng, dự án chỉnh trang biển Bãi Sau Vũng Tàu đang dần hoàn thiện. Một số hạng mục, bao gồm công viên và đường đi bộ, sẽ được đưa vào sử dụng vào dịp lễ 30/4. Dự án đã hoàn thành khoảng 60% khối lượng công việc, tuy nhiên, một số đoạn còn lại bị chậm tiến độ do các vấn đề liên quan đến bàn giao mặt bằng.",
     "link": "https://vnexpress.net/dien-mao-bai-sau-vung-tau-sau-gan-5-thang-chinh-trang-4864622.html",
@@ -2414,33 +2468,6 @@
       },
       {
         "text": "90%",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "IU: \"Em gái quốc dân\" giàu có xứ Hàn, từng trải qua tuổi thơ khó khăn",
-    "content": "IU, tên thật là Lee Ji Eun, là một trong những ca sĩ và diễn viên nổi tiếng của Hàn Quốc, được biết đến với giọng hát ngọt ngào và nhiều ca khúc thành công. Mặc dù hiện tại sở hữu tài sản gần 50 triệu USD, IU đã trải qua một tuổi thơ khó khăn với nhiều thử thách, bao gồm việc bị bắt nạt và gia đình lâm vào cảnh khốn khó. Cô đã kiên trì theo đuổi ước mơ ca hát và hiện đang gây chú ý với bộ phim \"When life gives you tangerines\". IU không chỉ thành công trong sự nghiệp mà còn tích cực tham gia các hoạt động từ thiện.",
-    "link": "https://dantri.com.vn/giai-tri/iu-em-gai-quoc-dan-giau-co-xu-han-tung-trai-qua-tuoi-tho-kho-khan-20250318195448529.htm",
-    "cat": "giai-tri",
-    "positivity": 9,
-    "importance": 8,
-    "question": "IU đã trải qua những khó khăn gì trong tuổi thơ của mình?",
-    "answers": [
-      {
-        "text": "Cô từng bị bắt nạt và gia đình lâm vào cảnh khó khăn.",
-        "correct": true
-      },
-      {
-        "text": "Cô sống trong một gia đình giàu có mà không gặp khó khăn gì.",
-        "correct": false
-      },
-      {
-        "text": "Cô không có ước mơ trở thành ca sĩ.",
-        "correct": false
-      },
-      {
-        "text": "Cô luôn được hỗ trợ từ gia đình trong mọi việc.",
         "correct": false
       }
     ]
@@ -3187,37 +3214,6 @@
       },
       {
         "text": "Ngày 23/3/2025 tại Hà Nội, Đà Nẵng và TP HCM",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "MC Thảo Vân bị trộm vào nhà lấy 10 chiếc đồng hồ",
-    "content": "MC Thảo Vân vừa trải qua một sự cố không mong muốn khi nhà chị bị trộm đột nhập và lấy đi 10 chiếc đồng hồ cùng một lọ nước hoa. Chị chia sẻ rằng do bất cẩn không khóa cửa, nên tên trộm đã dễ dàng vào nhà trong lúc con trai chị đang ngủ. Thảo Vân nhận ra rằng kẻ gian có thể đã theo dõi nhà mình trong một thời gian dài và đây là bài học lớn cho chị về việc nâng cao an ninh trong gia đình.",
-    "link": "https://dantri.com.vn/giai-tri/mc-thao-van-bi-trom-vao-nha-lay-10-chiec-dong-ho-20250322172948765.htm",
-    "cat": "phap-luat",
-    "positivity": 3,
-    "importance": 6,
-    "question": "MC Thảo Vân đã bị mất gì trong vụ trộm vào nhà?",
-    "answers": [
-      {
-        "text": "10 chiếc đồng hồ",
-        "correct": true
-      },
-      {
-        "text": "Một chiếc xe",
-        "correct": false
-      },
-      {
-        "text": "Một máy tính",
-        "correct": false
-      },
-      {
-        "text": "Một chiếc điện thoại",
-        "correct": false
-      },
-      {
-        "text": "Một chiếc nhẫn",
         "correct": false
       }
     ]
